src/OpenCvSharpExtern/core_Mat.h

CVAPI(ExceptionStatus) core_Mat_push_back_Vec2b(cv::Mat *self, interop::Vec2b v)
{
    return cvTry([&] {
    self->push_back(cv::Vec2b(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec3b(cv::Mat *self, interop::Vec3b v)
{
    return cvTry([&] {
    self->push_back(cv::Vec3b(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec4b(cv::Mat *self, interop::Vec4b v)
{
    return cvTry([&] {
    self->push_back(cv::Vec4b(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec6b(cv::Mat *self, interop::Vec6b v)
{
    return cvTry([&] {
    self->push_back(cv::Vec6b(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec2s(cv::Mat *self, interop::Vec2s v)
{
    return cvTry([&] {
    self->push_back(cv::Vec2s(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec3s(cv::Mat *self, interop::Vec3s v)
{
    return cvTry([&] {
    self->push_back(cv::Vec3s(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec4s(cv::Mat *self, interop::Vec4s v)
{
    return cvTry([&] {
    self->push_back(cv::Vec4s(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec6s(cv::Mat *self, interop::Vec6s v)
{
    return cvTry([&] {
    self->push_back(cv::Vec6s(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec2w(cv::Mat *self, interop::Vec2w v)
{
    return cvTry([&] {
    self->push_back(cv::Vec2w(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec3w(cv::Mat *self, interop::Vec3w v)
{
    return cvTry([&] {
    self->push_back(cv::Vec3w(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec4w(cv::Mat *self, interop::Vec4w v)
{
    return cvTry([&] {
    self->push_back(cv::Vec4w(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec6w(cv::Mat *self, interop::Vec6w v)
{
    return cvTry([&] {
    self->push_back(cv::Vec6w(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec2i(cv::Mat *self, interop::Vec2i v)
{
    return cvTry([&] {
    self->push_back(cv::Vec2i(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec3i(cv::Mat *self, interop::Vec3i v)
{
    return cvTry([&] {
    self->push_back(cv::Vec3i(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec4i(cv::Mat *self, interop::Vec4i v)
{
    return cvTry([&] {
    self->push_back(cv::Vec4i(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec6i(cv::Mat *self, interop::Vec6i v)
{
    return cvTry([&] {
    self->push_back(cv::Vec6i(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec2f(cv::Mat *self, interop::Vec2f v)
{
    return cvTry([&] {
    self->push_back(cv::Vec2f(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec3f(cv::Mat *self, interop::Vec3f v)
{
    return cvTry([&] {
    self->push_back(cv::Vec3f(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec4f(cv::Mat *self, interop::Vec4f v)
{
    return cvTry([&] {
    self->push_back(cv::Vec4f(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec6f(cv::Mat *self, interop::Vec6f v)
{
    return cvTry([&] {
    self->push_back(cv::Vec6f(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec2d(cv::Mat *self, interop::Vec2d v)
{
    return cvTry([&] {
    self->push_back(cv::Vec2d(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec3d(cv::Mat *self, interop::Vec3d v)
{
    return cvTry([&] {
    self->push_back(cv::Vec3d(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec4d(cv::Mat *self, interop::Vec4d v)
{
    return cvTry([&] {
    self->push_back(cv::Vec4d(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Vec6d(cv::Mat *self, interop::Vec6d v)
{
    return cvTry([&] {
    self->push_back(cv::Vec6d(v.val));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Point(cv::Mat *self, interop::Point v)
{
    return cvTry([&] {
    self->push_back(cv::Point(v.x, v.y));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Point2f(cv::Mat *self, interop::Point2f v)
{
    return cvTry([&] {
    self->push_back(cv::Point2f(v.x, v.y));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Point2d(cv::Mat *self, interop::Point2d v)
{
    return cvTry([&] {
    self->push_back(cv::Point2d(v.x, v.y));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Point3i(cv::Mat *self, interop::Point3i v)
{
    return cvTry([&] {
    self->push_back(cv::Point3i(v.x, v.y, v.z));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Point3f(cv::Mat *self, interop::Point3f v)
{
    return cvTry([&] {
    self->push_back(cv::Point3f(v.x, v.y, v.z));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Point3d(cv::Mat *self, interop::Point3d v)
{
    return cvTry([&] {
    self->push_back(cv::Point3d(v.x, v.y, v.z));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Size(cv::Mat *self, interop::Size v)
{
    return cvTry([&] {
    self->push_back(cv::Size(v.width, v.height));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Size2f(cv::Mat *self, interop::Size2f v)
{
    return cvTry([&] {
    self->push_back(cv::Size2f(v.width, v.height));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Size2d(cv::Mat *self, interop::Size2d v)
{
    return cvTry([&] {
    self->push_back(cv::Size2d(v.width, v.height));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Rect(cv::Mat *self, interop::Rect v)
{
    return cvTry([&] {
    self->push_back(cv::Rect(v.x, v.y, v.width, v.height));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Rect2f(cv::Mat *self, interop::Rect2f v)
{
    return cvTry([&] {
    self->push_back(cv::Rect2f(v.x, v.y, v.width, v.height));
    });
}
CVAPI(ExceptionStatus) core_Mat_push_back_Rect2d(cv::Mat *self, interop::Rect2d v)
{
    return cvTry([&] {
    self->push_back(cv::Rect2d(v.x, v.y, v.width, v.height));
    });
}
typedef void *(Mat_foreach_uchar)(uchar *value, const int *position);
typedef void *(Mat_foreach_Vec2b)(cv::Vec2b *value, const int *position);
typedef void *(Mat_foreach_Vec3b)(cv::Vec3b *value, const int *position);
typedef void *(Mat_foreach_Vec4b)(cv::Vec4b *value, const int *position);
typedef void *(Mat_foreach_Vec6b)(cv::Vec6b *value, const int *position);
typedef void *(Mat_foreach_short)(short *value, const int *position);
typedef void *(Mat_foreach_Vec2s)(cv::Vec2s *value, const int *position);
typedef void *(Mat_foreach_Vec3s)(cv::Vec3s *value, const int *position);
typedef void *(Mat_foreach_Vec4s)(cv::Vec4s *value, const int *position);
typedef void *(Mat_foreach_Vec6s)(cv::Vec6s *value, const int *position);
typedef void *(Mat_foreach_int)(int *value, const int *position);
typedef void *(Mat_foreach_Vec2i)(cv::Vec2i *value, const int *position);
typedef void *(Mat_foreach_Vec3i)(cv::Vec3i *value, const int *position);
typedef void *(Mat_foreach_Vec4i)(cv::Vec4i *value, const int *position);
typedef void *(Mat_foreach_Vec6i)(cv::Vec6i *value, const int *position);
typedef void *(Mat_foreach_float)(float *value, const int *position);
typedef void *(Mat_foreach_Vec2f)(cv::Vec2f *value, const int *position);
typedef void *(Mat_foreach_Vec3f)(cv::Vec3f *value, const int *position);
typedef void *(Mat_foreach_Vec4f)(cv::Vec4f *value, const int *position);
typedef void *(Mat_foreach_Vec6f)(cv::Vec6f *value, const int *position);
typedef void *(Mat_foreach_double)(double *value, const int *position);
typedef void *(Mat_foreach_Vec2d)(cv::Vec2d *value, const int *position);
typedef void *(Mat_foreach_Vec3d)(cv::Vec3d *value, const int *position);
typedef void *(Mat_foreach_Vec4d)(cv::Vec4d *value, const int *position);
typedef void *(Mat_foreach_Vec6d)(cv::Vec6d *value, const int *position);
CVAPI(ExceptionStatus) core_Mat_forEach_uchar(cv::Mat *m, Mat_foreach_uchar proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_uchar, uchar> functor(proc);
    m->forEach<uchar>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_Vec2b(cv::Mat *m, Mat_foreach_Vec2b proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_Vec2b, cv::Vec2b> functor(proc);
    m->forEach<cv::Vec2b>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_Vec3b(cv::Mat *m, Mat_foreach_Vec3b proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_Vec3b, cv::Vec3b> functor(proc);
    m->forEach<cv::Vec3b>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_Vec4b(cv::Mat *m, Mat_foreach_Vec4b proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_Vec4b, cv::Vec4b> functor(proc);
    m->forEach<cv::Vec4b>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_Vec6b(cv::Mat *m, Mat_foreach_Vec6b proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_Vec6b, cv::Vec6b> functor(proc);
    m->forEach<cv::Vec6b>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_short(cv::Mat *m, Mat_foreach_short proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_short, short> functor(proc);
    m->forEach<short>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_Vec2s(cv::Mat *m, Mat_foreach_Vec2s proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_Vec2s, cv::Vec2s> functor(proc);
    m->forEach<cv::Vec2s>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_Vec3s(cv::Mat *m, Mat_foreach_Vec3s proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_Vec3s, cv::Vec3s> functor(proc);
    m->forEach<cv::Vec3s>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_Vec4s(cv::Mat *m, Mat_foreach_Vec4s proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_Vec4s, cv::Vec4s> functor(proc);
    m->forEach<cv::Vec4s>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_Vec6s(cv::Mat *m, Mat_foreach_Vec6s proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_Vec6s, cv::Vec6s> functor(proc);
    m->forEach<cv::Vec6s>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_int(cv::Mat *m, Mat_foreach_int proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_int, int> functor(proc);
    m->forEach<int>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_Vec2i(cv::Mat *m, Mat_foreach_Vec2i proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_Vec2i, cv::Vec2i> functor(proc);
    m->forEach<cv::Vec2i>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_Vec3i(cv::Mat *m, Mat_foreach_Vec3i proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_Vec3i, cv::Vec3i> functor(proc);
    m->forEach<cv::Vec3i>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_Vec4i(cv::Mat *m, Mat_foreach_Vec4i proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_Vec4i, cv::Vec4i> functor(proc);
    m->forEach<cv::Vec4i>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_Vec6i(cv::Mat *m, Mat_foreach_Vec6i proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_Vec6i, cv::Vec6i> functor(proc);
    m->forEach<cv::Vec6i>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_float(cv::Mat *m, Mat_foreach_float proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_float, float> functor(proc);
    m->forEach<float>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_Vec2f(cv::Mat *m, Mat_foreach_Vec2f proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_Vec2f, cv::Vec2f> functor(proc);
    m->forEach<cv::Vec2f>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_Vec3f(cv::Mat *m, Mat_foreach_Vec3f proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_Vec3f, cv::Vec3f> functor(proc);
    m->forEach<cv::Vec3f>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_Vec4f(cv::Mat *m, Mat_foreach_Vec4f proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_Vec4f, cv::Vec4f> functor(proc);
    m->forEach<cv::Vec4f>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_Vec6f(cv::Mat *m, Mat_foreach_Vec6f proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_Vec6f, cv::Vec6f> functor(proc);
    m->forEach<cv::Vec6f>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_double(cv::Mat *m, Mat_foreach_double proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_double, double> functor(proc);
    m->forEach<double>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_Vec2d(cv::Mat *m, Mat_foreach_Vec2d proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_Vec2d, cv::Vec2d> functor(proc);
    m->forEach<cv::Vec2d>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_Vec3d(cv::Mat *m, Mat_foreach_Vec3d proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_Vec3d, cv::Vec3d> functor(proc);
    m->forEach<cv::Vec3d>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_Vec4d(cv::Mat *m, Mat_foreach_Vec4d proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_Vec4d, cv::Vec4d> functor(proc);
    m->forEach<cv::Vec4d>(functor);
    });
}
CVAPI(ExceptionStatus) core_Mat_forEach_Vec6d(cv::Mat *m, Mat_foreach_Vec6d proc)
{
    return cvTry([&] {
    const Functor<Mat_foreach_Vec6d, cv::Vec6d> functor(proc);
    m->forEach<cv::Vec6d>(functor);
    });
}