src/OpenCvSharp/Internal/PInvoke/NativeMethods/core/NativeMethods_core_Mat.cs


    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec2b(OpenCvSafeHandle self, Vec2b v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec3b(OpenCvSafeHandle self, Vec3b v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec4b(OpenCvSafeHandle self, Vec4b v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec6b(OpenCvSafeHandle self, Vec6b v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec2s(OpenCvSafeHandle self, Vec2s v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec3s(OpenCvSafeHandle self, Vec3s v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec4s(OpenCvSafeHandle self, Vec4s v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec6s(OpenCvSafeHandle self, Vec6s v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec2w(OpenCvSafeHandle self, Vec2w v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec3w(OpenCvSafeHandle self, Vec3w v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec4w(OpenCvSafeHandle self, Vec4w v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec6w(OpenCvSafeHandle self, Vec6w v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec2i(OpenCvSafeHandle self, Vec2i v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec3i(OpenCvSafeHandle self, Vec3i v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec4i(OpenCvSafeHandle self, Vec4i v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec6i(OpenCvSafeHandle self, Vec6i v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec2f(OpenCvSafeHandle self, Vec2f v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec3f(OpenCvSafeHandle self, Vec3f v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec4f(OpenCvSafeHandle self, Vec4f v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec6f(OpenCvSafeHandle self, Vec6f v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec2d(OpenCvSafeHandle self, Vec2d v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec3d(OpenCvSafeHandle self, Vec3d v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec4d(OpenCvSafeHandle self, Vec4d v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Vec6d(OpenCvSafeHandle self, Vec6d v);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Point(OpenCvSafeHandle self, Point v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Point2f(OpenCvSafeHandle self, Point2f v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Point2d(OpenCvSafeHandle self, Point2d v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Point3i(OpenCvSafeHandle self, Point3i v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Point3f(OpenCvSafeHandle self, Point3f v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Point3d(OpenCvSafeHandle self, Point3d v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Size(OpenCvSafeHandle self, Size v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Size2f(OpenCvSafeHandle self, Size2f v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Size2d(OpenCvSafeHandle self, Size2d v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Rect(OpenCvSafeHandle self, Rect v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Rect2f(OpenCvSafeHandle self, Rect2f v);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_push_back_Rect2d(OpenCvSafeHandle self, Rect2d v);

    #endregion

    #region forEach

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_uchar(OpenCvSafeHandle m, MatForeachFunctionByte proc);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_Vec2b(OpenCvSafeHandle m, MatForeachFunctionVec2b proc);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_Vec3b(OpenCvSafeHandle m, MatForeachFunctionVec3b proc);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_Vec4b(OpenCvSafeHandle m, MatForeachFunctionVec4b proc);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_Vec6b(OpenCvSafeHandle m, MatForeachFunctionVec6b proc);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_short(OpenCvSafeHandle m, MatForeachFunctionInt16 proc);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_Vec2s(OpenCvSafeHandle m, MatForeachFunctionVec2s proc);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_Vec3s(OpenCvSafeHandle m, MatForeachFunctionVec3s proc);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_Vec4s(OpenCvSafeHandle m, MatForeachFunctionVec4s proc);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_Vec6s(OpenCvSafeHandle m, MatForeachFunctionVec6s proc);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_int(OpenCvSafeHandle m, MatForeachFunctionInt32 proc);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_Vec2i(OpenCvSafeHandle m, MatForeachFunctionVec2i proc);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_Vec3i(OpenCvSafeHandle m, MatForeachFunctionVec3i proc);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_Vec4i(OpenCvSafeHandle m, MatForeachFunctionVec4i proc);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_Vec6i(OpenCvSafeHandle m, MatForeachFunctionVec6i proc);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_float(OpenCvSafeHandle m, MatForeachFunctionFloat proc);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_Vec2f(OpenCvSafeHandle m, MatForeachFunctionVec2f proc);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_Vec3f(OpenCvSafeHandle m, MatForeachFunctionVec3f proc);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_Vec4f(OpenCvSafeHandle m, MatForeachFunctionVec4f proc);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_Vec6f(OpenCvSafeHandle m, MatForeachFunctionVec6f proc);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_double(OpenCvSafeHandle m, MatForeachFunctionDouble proc);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_Vec2d(OpenCvSafeHandle m, MatForeachFunctionVec2d proc);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_Vec3d(OpenCvSafeHandle m, MatForeachFunctionVec3d proc);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_Vec4d(OpenCvSafeHandle m, MatForeachFunctionVec4d proc);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus core_Mat_forEach_Vec6d(OpenCvSafeHandle m, MatForeachFunctionVec6d proc);

    #endregion

    #region Operators
